apps/base/lancache/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lancache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lancache
  template:
    metadata:
      labels:
        app: lancache
    spec:
      containers:
      - name: lancache
        image: lancachenet/monolithic:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: lancache-storage
          mountPath: /data/cache
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
      volumes:
      - name: lancache-storage
        persistentVolumeClaim:
          claimName: lancache-pvc
