apps/base/lancache/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lancache
spec:
  selector:
    app: lancache
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
