apps/base/lancache/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lancache
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lancache.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: lancache
          port: http
      middlewares:
        - name: default-headers
  tls:
    secretName: local-hejsan-xyz-tls
